...
  static const String appTitle = 'Connect';
  
  // Game Modes
  static const String coupleMode = 'Couple';
  static const String friendsMode = 'Friends';
  static const String familyMode = 'Family';
  static const String pandoraMode = 'Pandora';
  
  // UI Constants
  static const double defaultPadding = 24.0;
  static const double buttonHeight = 60.0;
  static const double buttonWidth = 200.0;
  static const double largButtonWidth = 250.0;
...
